changes dependency from pandas to xlsx2csv

--- a/processor/CMakeLists.txt
+++ b/processor/CMakeLists.txt
@@ -3,5 +3,5 @@ project(XLSX_Processor)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp)
+set(SOURCE_FILES main.cpp Manager.cpp Manager.h)
 add_executable(XLSX_Processor ${SOURCE_FILES})
